# Python.FastAPI.V01

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  dagger.json  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: CLAUDE.md  MEMORY.md  settings.local.json
.claude/rules/features/: working-on-issues.md
.claude/rules/git/: git-commit-message.md  git-repo.md  git-workflow.md
.claude/rules/github/: github.md
.claude/rules/python/: python-code-style.md  python-docstrings.md
.claude/rules/tests/: tests.md
.dagger/: pyproject.toml
.dagger/src/ci_pipeline/: __init__.py  main.py
.dagger/src/ci_pipeline/utils/: __init__.py  coverage.py  locust.py
.dagger/src/python_fastapi_v_01/: main.py
.github/workflows/: release.yml  style.yml  tests.yml
alembic/main/: env.py
alembic/main/versions/: 2026_02_13_1422-fc7425fa20a0_init_database.py  2026_03_25_1752-e047c73233a7_drop_unique_constraint_on_password_hash.py
docs/: index.html  index.md  openapi.yaml
docs/database/main/: current_schema.sql  new_schema.sql
docs/diagrams/src/auth/: erd.puml
docs/diagrams/src/shared/: erd.puml  generic.puml
docs/openapi/: index.html  openapi.yaml
docs/pages/: database.md
openspec/changes/archive/2026-03-25-performance-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-25-pytest-random-execution-order/: design.md  proposal.md  tasks.md
openspec/changes/auto-semver-tag-publish/: design.md  proposal.md  tasks.md
openspec/changes/auto-semver-tag-publish/specs/release-automation/: spec.md
openspec/changes/code-coverage/: design.md  proposal.md  tasks.md
openspec/changes/password-hashing/: design.md  proposal.md  tasks.md
openspec/changes/performance-tests/: tasks.md
openspec/specs/performance-tests/: spec.md
openspec/specs/pytest-random-order/: spec.md
openspec/specs/release-automation/: spec.md
requests/: http-client.env.json  server-info.http
requests/api/v1/: server-info.http
requests/auth/: users.http
src/: main.py
src/api/: __init__.py  routes.py
src/api/auth/: __init__.py  routes.py
src/api/auth/users/: __init__.py  models.py  repositories.py  routes.py  schemas.py
src/api/server_info/: __init__.py  repositories.py  routes.py  schemas.py
src/api/shared/: __init__.py  models.py
src/api/shared/schemas/: __init__.py  base.py  datetimes.py  errors.py  requests.py  responses.py
src/api/shared/security/: __init__.py  passwords.py
src/api/shared/system/: __init__.py  databases.py  datetimes.py  request_tracing.py  settings.py
src/api/shared/system/query_builder/: __init__.py  (+1 more)
src/api/v1/: __init__.py  routes.py
src/api/v1/server_info/: routes.py  schemas.py
src/api/v1/shared/: __init__.py  databases.py
src/system/: datetimes.py  settings.py
src/utils/: __init__.py  openapi.py
tests/: ruff.toml
tests/acceptance_tests/: conftest.py
tests/acceptance_tests/non_functional/locustfiles/: auth.py  heavy_load.py  normal_load.py
tests/acceptance_tests/non_functional/test_api/: test_benchmarks.py
tests/acceptance_tests/test_api/test_server_info/: test_get_server_info.py
tests/integration_tests/: conftest.py
tests/integration_tests/test_api/test_server_info/: test_get_server_info.py
tests/testing_utils/: __init__.py  databases.py  datetimes.py  responses.py
tests/unit_tests/: test_main.py
(+36 files in other folders)
