[project]
name = "python-fastapi-v01"
title = "FastAPI Template V1"
version = "0.0.0"
description = "Template project for FastAPI applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "greenlet>=3.3.1",
    "sqlalchemy>=2.0.48",
    "tzdata>=2025.3"
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "asgi-lifespan>=2.1.0",
    "dagger-io>=0.20.3",
    "httpx>=0.28.1",
    "locust>=2.43.3",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=6.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-randomly>=4.0.1",
    "ruff>=0.15.7",
    "yappi>=1.7.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "clean_main_db: marks tests that require a clean main database state",
    "seed_uuid: marks tests that require a seeded deterministic UUID generation",
]
